Adding more content

--- a/crash_course_llms.ipynb
+++ b/crash_course_llms.ipynb
@@ -9,6 +9,85 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%html\n",
+    "<style>\n",
+    "/* Notebook-wide styles */\n",
+    ".notebook-container {\n",
+    "    font-family: -apple-system, BlinkMacSystemFont, \"Segoe UI\", Roboto, Helvetica, Arial, sans-serif;\n",
+    "    line-height: 1.6;\n",
+    "    color: #333;\n",
+    "    background-color: #f5f5f5;\n",
+    "}\n",
+    "\n",
+    "/* Headings */\n",
+    "h1, h2, h3, h4, h5, h6 {\n",
+    "    font-weight: bold;\n",
+    "    margin-top: 40px;\n",
+    "    margin-bottom: 20px;\n",
+    "    color: #1d1d1f;\n",
+    "}\n",
+    "\n",
+    "/* Images */\n",
+    "img {\n",
+    "    display: block;\n",
+    "    margin: 30px auto;\n",
+    "    border-radius: 10px;\n",
+    "    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);\n",
+    "    transition: transform 0.3s ease;\n",
+    "    border: 2px solid #fff;\n",
+    "}\n",
+    "\n",
+    "img:hover {\n",
+    "    transform: translateY(-5px);\n",
+    "}\n",
+    "\n",
+    "/* Image captions */\n",
+    ".image-caption {\n",
+    "    text-align: center;\n",
+    "    font-size: 14px;\n",
+    "    color: #666;\n",
+    "    margin-top: -10px;\n",
+    "    margin-bottom: 30px;\n",
+    "}\n",
+    "\n",
+    "/* Links */\n",
+    "a {\n",
+    "    color: #007aff;\n",
+    "    text-decoration: none;\n",
+    "}\n",
+    "\n",
+    "a:hover {\n",
+    "    text-decoration: underline;\n",
+    "}\n",
+    "\n",
+    "/* Code cells */\n",
+    ".input_area pre {\n",
+    "    background-color: #1d1d1f;\n",
+    "    color: #fff;\n",
+    "    padding: 15px;\n",
+    "    border-radius: 10px;\n",
+    "}\n",
+    "\n",
+    "/* Markdown cells */\n",
+    ".text_cell_render {\n",
+    "    padding: 30px;\n",
+    "    background-color: #fff;\n",
+    "    border-radius: 10px;\n",
+    "    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);\n",
+    "}\n",
+    "</style>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "ZGe8RF_LzKjK"
@@ -21,6 +100,7 @@
     "Welcome to this crash course on leveraging Large Language Models (LLMs) to infuse intelligence into your applications. In this 30-minute session, we'll explore the key use cases of LLMs and how you can quickly get started with building GenAI powered applications. Get ready to dive in! 🌟\n",
     "\n",
     "#### Agenda 📋\n",
+    "- Getting Starting with the Intel Developer Cloud ☁️\n",
     "- Setting up the environment ⚙️\n",
     "- Zero-shot Chat 🎯\n",
     "    - What is zero-shot learning?\n",
@@ -35,6 +115,96 @@
     "    - What is fine-tuning?\n",
     "    - Why use fine-tuning?\n",
     "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "#### 🌟 Getting Started with Intel Developer Cloud 🌟\n",
+    "To prototype and build your GenAI solution on Intel Developer Cloud, you'll first need to create a free account. Here's how:\n",
+    "\n",
+    "1. Go to [cloud.intel.com/hoohacks](https://cloud.intel.com/hoohacks) and click \"Get Started\" if you don't have an account yet.\n",
+    "   \n",
+    "   <img src=\"./images/idc_home_page.png\" alt=\"Intel Developer Cloud homepage\" width=\"500\">\n",
+    "   <div class=\"image-caption\"\">Intel Developer Cloud homepage</div>\n",
+    "\n",
+    "2. Register for a Standard (free) account by filling out the sign-up form.\n",
+    "   \n",
+    "   <img src=\"./images/idc_service_tiers.png\" alt=\"Intel Developer Cloud service tiers\" width=\"500\">\n",
+    "   <div class=\"image-caption\">Intel Developer Cloud service tiers</div>\n",
+    "\n",
+    "3. Once registered, log in with your new credentials. You'll land on the Intel Developer Cloud Console home page at [https://console.cloud.intel.com](https://console.cloud.intel.com).\n",
+    "   \n",
+    "   <img src=\"./images/console_genai_essentials.png\" alt=\"Intel Developer Cloud Console - GenAI Essentials\" width=\"500\">\n",
+    "   <div class=\"image-caption\">Intel Developer Cloud Console - GenAI Essentials</div>\n",
+    "\n",
+    "4. From the home page or the left sidebar, navigate to **\"Training\"** and look for the \"Gen AI Essentials\" content. This is where you'll find hands-on tutorials for building GenAI applications.\n",
+    "\n",
+    "#### 🤖 Prototyping Fast with Intel Hardware 🤖\n",
+    "When you launch a Jupyter notebook from GenAI Essentials, it will have shared access to a system with:\n",
+    "\n",
+    "- **112 CPU cores**\n",
+    "- **512 GB RAM**\n",
+    "- **1 Intel Data Center GPU Max with 48GB VRAM**\n",
+    "\n",
+    "This notebook environment is perfect for building your GenAI solution prototype. Go wild and have fun experimenting! 😄\n",
+    "\n",
+    "If you are developing in pytorch, select the `pytorch-gpu` kernel and to use intel GPUs:\n",
+    "\n",
+    "```python\n",
+    "import torch\n",
+    "import intel_extension_for_pytorch as ipex\n",
+    "print(f\"GPU is: {torch.xpu.get_device_name()}\")\n",
+    "```\n",
+    "#### 🚀 Deploying Your Solution 🚀\n",
+    "Once you have a working prototype and are ready to deploy it for others to use, come talk to me. I can provide you with cloud credits to launch a dedicated CPU VM to host your deployed app.\n",
+    "\n",
+    "To expose the API endpoint, you can use a tool like ngrok to create a public URL.\n",
+    "\n",
+    "To expose your GenAI application to the internet, you can use ngrok and create a simple Flask server. Here's how:\n",
+    "\n",
+    "\n",
+    "1. Install ngrok and Flask:\n",
+    "\n",
+    "```python\n",
+    "pip install flask ngrok\n",
+    "```\n",
+    "3. Create a simple Flask server in a new python file (Default port is 5000):\n",
+    "```python\n",
+    "   from flask import Flask, request, jsonify\n",
+    "    app = Flask(__name__)\n",
+    "\n",
+    "    @app.route('/api', methods=['POST'])\n",
+    "    def api():\n",
+    "    data = request.get_json()\n",
+    "    # Process the request and generate a response\n",
+    "    response = {'message': 'Hello, World!'}\n",
+    "    return jsonify(response)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run()\n",
+    "```\n",
+    "\n",
+    "3. In a new python file, set up ngrok to expose the Flask server:\n",
+    "\n",
+    "```python\n",
+    "from pyngrok import ngrok\n",
+    "\n",
+    "# Start ngrok tunnel\n",
+    "public_url = ngrok.connect(5000)\n",
+    "print(f'Public URL: {public_url}')\n",
+    "```\n",
+    "4. Run the Flask server and ngrok python files. The public URL printed by ngrok can be used to access your GenAI application from anywhere on the internet.\n",
+    "\n",
+    "The provided example demonstrates how to create a simple Flask server and expose it using ngrok. You can build upon this foundation to integrate your GenAI application and handle the necessary requests and responses.\n",
+    "\n",
+    "> **Note:** This is a basic example to get you started. You'll need to modify the Flask server to integrate your GenAI application logic and handle the appropriate requests and responses.\n",
+    "\n",
+    "This will allow users to access your GenAI application over the internet.\n",
+    "\n",
+    "Let me know if you have any other questions! I'm excited to see what you build 🙌"
    ]
   },
   {
@@ -717,8 +887,8 @@
    "outputs": [],
    "source": [
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
-    "\n",
-    "device = \"xpu\" if torch.xpu.is_available() else \"cpu\"\n",
+    "import torch\n",
+    "device = \"cpu\" #\"xpu\" if torch.xpu.is_available() else \"cpu\"\n",
     "model_name = \"microsoft/phi-1_5\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
@@ -974,19 +1144,6 @@
    },
    "outputs": [],
    "source": [
-    "# Example inference with context\n",
-    "#fine_tuned_model = AutoModelForCausalLM.from_pretrained(\"./fine_tuned_model\").to(\"cpu\")\n",
-    "\n",
-    "#print(\"\\nInference after fine-tuning without context:\")\n",
-    "\n",
-    "#prompt = dataset[42][\"instruction\"]\n",
-    "#context = \"\"\n",
-    "#input_text = f\"### Instruction\\n{prompt}\\n\\n### Context\\n{context}\\n\\n### Answer\\n\"\n",
-    "#input_ids = tokenizer.encode(input_text, return_tensors=\"pt\").to(\"cpu\")\n",
-    "\n",
-    "#outputs = fine_tuned_model.generate(input_ids=input_ids, max_length=200, num_return_sequences=1)\n",
-    "#print(tokenizer.decode(outputs[0], skip_special_tokens=True))\n",
-    "\n",
     "print(\"\\nInference after fine-tuning with context:\")\n",
     "del fine_tuned_model\n",
     "if torch.xpu.is_available():\n",
@@ -1029,9 +1186,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "pytorch-gpu",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pytorch-gpu"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1043,7 +1200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.0"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
