Add documentation to parameters that were not in doc string. Some trivial typo fixes.

--- a/text_to_image.ipynb
+++ b/text_to_image.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "Welcome! Whether you're a writer, designer, developer, or someone curious about the intersection of text and visuals, this guide is for you.\n",
     "\n",
-    "Have you ever wanted to convert a description or phrase into an image? With Text-to-Image Stable Diffusion, you can do just that. Input a description like \"a quiet sunset over the ocean\" or \"a cityscape at night,\" and see it translated into a visual representation.\n",
+    "Have you ever wanted to convert a description or phrase into an image? With Text-to-Image Stable Diffusion, you can do just that. Input a description like \"a quiet sunset over the ocean\" or \"a cityscape at night\" and see it translated into a visual representation.\n",
     "\n",
     "This notebook is powered by Intel® Data Center GPU Max Series and will walk you through examples, help you understand the outputs, and give pointers on how to get the best results. No technical deep dives, just clear steps and explanations.\n",
     "\n",
@@ -121,7 +121,7 @@
     "\n",
     "- **Pipeline Loading**: The `_load_pipeline` function is where we bring the pre-trained model onboard. This sets the stage for all our text-to-image transformations.\n",
     "\n",
-    "- **Optimization**: Performance is paramount. With the `_optimize_pipeline` and `optimize_pipeline` methods, we leverage Intel-specific optimizations using the Intel Extension For PyTorch (IPEX) to ensure our model runs fast!.\n",
+    "- **Optimization**: Performance is paramount. With the `_optimize_pipeline` and `optimize_pipeline` methods, we leverage Intel-specific optimizations using the Intel Extension for PyTorch* (IPEX) to ensure our model runs fast!\n",
     "\n",
     "- **The Grand Finale - Image Generation**: The `generate_images` method is where dreams meet reality. It interprets the textual prompts, consults with the model, and then crafts images that encapsulate the essence of the prompts. You can choose the model, provide a prompt and specify the number of images.\n",
     "\n",
@@ -173,6 +173,8 @@
     "        - device: The device to run the model on. Default is \"xpu\".\n",
     "        - torch_dtype: The data type to use in the model. Default is torch.bfloat16.\n",
     "        - optimize: Whether to optimize the model after loading. Default is True.\n",
+    "        - enable_scheduler: Whether to use scheduler in the model. Default is False.\n",
+    "        - warmup: Whether to warm up the model after loading. Default is False.\n",
     "        \"\"\"\n",
     "\n",
     "        self.device = device\n",
@@ -197,7 +199,6 @@
     "        model_id_or_path: str,\n",
     "        torch_dtype: torch.dtype,\n",
     "        enable_scheduler: bool,\n",
-    "\n",
     "    ) -> DiffusionPipeline:\n",
     "        \"\"\"\n",
     "        Loads the pretrained model and prepares it for inference.\n",
@@ -205,6 +206,7 @@
     "        Parameters:\n",
     "        - model_id_or_path: The identifier or path of the pretrained model.\n",
     "        - torch_dtype: The data type to use in the model.\n",
+    "        - enable_scheduler: Whether to use scheduler in the model.\n",
     "\n",
     "        Returns:\n",
     "        - pipeline: The loaded model pipeline.\n",
@@ -304,7 +306,7 @@
     "\n",
     "        Parameters:\n",
     "        - prompt: The text prompt to generate images from.\n",
-    "        - num_inference_steps: Number of noise removal steps.\n",
+    "        - num_inference_steps: Number of noise removal steps. Default is 50.\n",
     "        - num_images: The number of images to generate. Default is 5.\n",
     "        - save_path: The directory to save the generated images in. Default is \"output\".\n",
     "\n",
@@ -352,7 +354,7 @@
     "- **Model Selection**: Pick your desired pre-trained model from the available list.\n",
     "- **Prompt Input**: Enter your creative textual prompt, the muse for the image to be generated.\n",
     "- **Number of Images**: Specify the number of visual interpretations you'd like to see for your prompt.\n",
-    "- **Enhancement**: Toggle an option to enhance your your prompt, potentially enriching the generated results.\n",
+    "- **Enhancement**: Toggle an option to enhance your prompt, potentially enriching the generated results.\n",
     "\n",
     "After setting your preferences, all it takes is a button click to witness the text's metamorphosis into imagery!\n",
     "\n",
@@ -385,8 +387,6 @@
     "import ipywidgets as widgets\n",
     "\n",
     "model_cache = {}\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "def prompt_to_image():\n",
