--- a/gemma_xpu_finetuning.ipynb
+++ b/gemma_xpu_finetuning.ipynb
@@ -46,7 +46,7 @@
     "7. Saving and loading the fine-tuned model for future use\n",
     "\n",
     "\n",
-    "The notebook demonstrates how fine-tuning can enhance a model's performance on a diverse range of topics, making it more versatile and applicable to various domains. You will gain insights into the process of creating a **task-specific model** that can provide accurate and relevant responses to a wide range of questions.\n",
+    "The notebook demonstrates how fine-tuning can enhance model's performance on a diverse range of topics, making it more versatile and applicable to various domains. You will gain insights into the process of creating a **task-specific model** that can provide accurate and relevant responses to a wide range of questions.\n",
     "</br>\n",
     "___"
    ]
@@ -73,8 +73,8 @@
     "import os\n",
     "\n",
     "# Install the required packages\n",
-    "!{sys.executable} -m pip install --upgrade  \"transformers>=4.38.*\"\n",
-    "!{sys.executable} -m pip install --upgrade  \"datasets>=2.18.*\"\n",
+    "!{sys.executable} -m pip install --upgrade \"transformers>=4.38.*\"\n",
+    "!{sys.executable} -m pip install --upgrade \"datasets>=2.18.*\"\n",
     "!{sys.executable} -m pip install --upgrade \"wandb>=0.16.*\"\n",
     "!{sys.executable} -m pip install --upgrade \"trl>=0.7.11\"\n",
     "!{sys.executable} -m pip install --upgrade \"peft>=0.9.0\"\n",
@@ -83,7 +83,7 @@
     "# Get the site-packages directory\n",
     "site_packages_dir = site.getsitepackages()[0]\n",
     "\n",
-    "# add the site pkg directory where these pkgs are insalled to the top of sys.path\n",
+    "# Add the site pkg directory where these pkgs are insalled to the top of sys.path\n",
     "if not os.access(site_packages_dir, os.W_OK):\n",
     "    user_site_packages_dir = site.getusersitepackages()\n",
     "    if user_site_packages_dir in sys.path:\n",
@@ -129,9 +129,9 @@
     "os.environ[\"LD_PRELOAD\"] = f\"{ld_preload}:{conda_prefix}/lib/libtcmalloc.so\"\n",
     "# Reduce the overhead of submitting commands to the GPU\n",
     "os.environ[\"SYCL_PI_LEVEL_ZERO_USE_IMMEDIATE_COMMANDLISTS\"] = \"1\"\n",
-    "# reducing memory accesses by fusing SDP ops\n",
+    "# Reducing memory accesses by fusing SDP ops\n",
     "os.environ[\"ENABLE_SDP_FUSION\"] = \"1\"\n",
-    "# set openMP threads to number of physical cores\n",
+    "# Set openMP threads to number of physical cores\n",
     "os.environ[\"OMP_NUM_THREADS\"] = str(num_physical_cores)\n",
     "# Set the thread affinity policy\n",
     "os.environ[\"OMP_PROC_BIND\"] = \"close\"\n",
@@ -154,7 +154,7 @@
     "___\n",
     "#### Step 2: Initializing the XPU and monitoring GPU memory in realtime 🎮\n",
     "\n",
-    "Next, we'll initialize the Intel Max 1550 GPU, which is referred to as an XPU. We'll use the `intel_extension_for_pytorch` library to seamlessly integrate XPU namespace with. 🤝\n",
+    "Next, we'll initialize the Intel Max 1550 GPU, which is referred to as XPU. We'll use the `intel_extension_for_pytorch` library to seamlessly integrate XPU namespace with. 🤝\n",
     "\n",
     "##### 👀 GPU Memory Monitoring 👀\n",
     "\n",
@@ -188,21 +188,21 @@
     "\n",
     "if torch.xpu.is_available():\n",
     "    torch.xpu.empty_cache()\n",
-    "    \n",
+    "\n",
     "    def get_memory_usage():\n",
     "        memory_reserved = round(torch.xpu.memory_reserved() / 1024**3, 3)\n",
     "        memory_allocated = round(torch.xpu.memory_allocated() / 1024**3, 3)\n",
     "        max_memory_reserved = round(torch.xpu.max_memory_reserved() / 1024**3, 3)\n",
     "        max_memory_allocated = round(torch.xpu.max_memory_allocated() / 1024**3, 3)\n",
     "        return memory_reserved, memory_allocated, max_memory_reserved, max_memory_allocated\n",
-    "   \n",
+    "\n",
     "    def print_memory_usage():\n",
     "        device_name = torch.xpu.get_device_name()\n",
     "        print(f\"XPU Name: {device_name}\")\n",
     "        memory_reserved, memory_allocated, max_memory_reserved, max_memory_allocated = get_memory_usage()\n",
     "        memory_usage_text = f\"XPU Memory: Reserved={memory_reserved} GB, Allocated={memory_allocated} GB, Max Reserved={max_memory_reserved} GB, Max Allocated={max_memory_allocated} GB\"\n",
     "        print(f\"\\r{memory_usage_text}\", end=\"\", flush=True)\n",
-    "    \n",
+    "\n",
     "    async def display_memory_usage(output):\n",
     "        device_name = torch.xpu.get_device_name()\n",
     "        output.update(HTML(f\"<p>XPU Name: {device_name}</p>\"))\n",
@@ -211,7 +211,7 @@
     "            memory_usage_text = f\"XPU ({device_name}) :: Memory: Reserved={memory_reserved} GB, Allocated={memory_allocated} GB, Max Reserved={max_memory_reserved} GB, Max Allocated={max_memory_allocated} GB\"\n",
     "            output.update(HTML(f\"<p>{memory_usage_text}</p>\"))\n",
     "            await asyncio.sleep(5)\n",
-    "    \n",
+    "\n",
     "    def start_memory_monitor(output):\n",
     "        loop = asyncio.new_event_loop()\n",
     "        asyncio.set_event_loop(loop)\n",
@@ -232,7 +232,7 @@
     "___\n",
     "#### Step 3: Configuring the LoRA Settings 🎛️\n",
     "\n",
-    "To finetune our Gemma model efficiently, we'll use the LoRA (Low-Rank Adaptation) technique. \n",
+    "To fine-tune our Gemma model efficiently, we'll use the LoRA (Low-Rank Adaptation) technique. \n",
     "\n",
     "LoRA allows us to adapt the model to our specific task by training only a small set of additional parameters. This greatly reduces the training time and memory requirements! ⏰\n",
     "\n",
@@ -277,7 +277,7 @@
    "id": "69c8af5b-f8d6-4d40-8b12-90e254d715b3",
    "metadata": {},
    "source": [
-    "> Note: Before running this notebook, please ensure you have read and agreed to the [Gemma Terms of Use](https://ai.google.dev/gemma/terms). You'll need to visit the Gemma model card on the Hugging Face Hub, accept the usage terms, and generate an access token with write permissions. This token will be required to load the model and push your finetuned version back to the Hub.\n",
+    "> Note: Before running this notebook, please ensure you have read and agreed to the [Gemma Terms of Use](https://ai.google.dev/gemma/terms). You'll need to visit the Gemma model card on the Hugging Face Hub, accept the usage terms, and generate an access token with write permissions. This token will be required to load the model and push your fine-tuned version back to the Hub.\n",
     "\n",
     "To create an access token:\n",
     "1. Go to your Hugging Face account settings.\n",
@@ -391,7 +391,7 @@
     "\n",
     "For finetuning our model, we'll be using a subset of the \"databricks/databricks-dolly-15k\" dataset. This dataset contains a diverse range of question-answer pairs spanning multiple categories. By focusing specifically on the question-answer pairs, we aim to adapt our model to provide accurate and relevant responses to various inquiries. 🙋‍♀️🙋‍♂️\n",
     "\n",
-    "We'll extract the question-answer categories from the dataset using the code provided in the cell below. By filtering the dataset based on the \"Question answering\" category, we ensure that our model is finetuned on relevant question-answer pairs. This targeted approach allows us to leverage real-world data to enhance our model's ability to provide accurate and informative responses. 💡\n",
+    "We'll extract the question-answer categories from the dataset using the code provided in the cell below. By filtering the dataset based on the \"Question answering\" category, we ensure that our model is fine-tuned on relevant question-answer pairs. This targeted approach allows us to leverage real-world data to enhance our model's ability to provide accurate and informative responses. 💡\n",
     "\n",
     "We'll then split the extracted question-answer data into training and validation sets using the train_test_split function from the sklearn.model_selection module. This will help us assess the model's performance during the finetuning process. 📊"
    ]
@@ -452,7 +452,7 @@
     "___\n",
     "#### Step 7: Finetuning the Model 🏋️‍♂️\n",
     "\n",
-    "It's time to finetune our Gemma model! We'll use the SFTTrainer class from the trl library, which is designed for supervised fine-tuning of language models. We'll specify the training arguments, such as batch size, learning rate, and evaluation strategy. 📈\n",
+    "It's time to fine-tune our Gemma model! We'll use the `SFTTrainer` class from the trl library, which is designed for supervised fine-tuning of language models. We'll specify the training arguments, such as batch size, learning rate, and evaluation strategy. 📈\n",
     "\n",
     "Supervised fine-tuning (SFT) is a powerful technique for adapting pre-trained language models to specific tasks. By providing the model with question-answer pairs from the Databricks Dolly 15k dataset, we can guide it to generate more accurate and relevant responses. SFT allows the model to learn the patterns and relationships specific to the diverse range of topics covered in the dataset. 🎓\n",
     "\n",
@@ -545,13 +545,13 @@
    "metadata": {},
    "source": [
     "___\n",
-    "#### Step 8: Savethe Finetuned Model 💾\n",
+    "#### Step 8: Save the Fine-tuned Model 💾\n",
     "\n",
-    "After finetuning, let's put our model to the test! But before we do that, we need to merge the LoRA weights with the base model. This step is crucial because the LoRA weights contain the learned adaptations from the finetuning process. By merging the LoRA weights, we effectively incorporate the knowledge gained during finetuning into the base model. 🧠💡\n",
+    "After fine-tuning, let's put our model to the test! But before we do that, we need to merge the LoRA weights with the base model. This step is crucial because the LoRA weights contain the learned adaptations from the fine-tuning process. By merging the LoRA weights, we effectively incorporate the knowledge gained during fine-tuning into the base model. 🧠💡\n",
     "\n",
-    "To merge the LoRA weights, we'll use the `merge_and_unload()` function provided by the PEFT library. This function seamlessly combines the LoRA weights with the corresponding weights of the base model, creating a single unified model that includes the finetuned knowledge. 🎛️🔧\n",
+    "To merge the LoRA weights, we'll use the `merge_and_unload()` function provided by the PEFT library. This function seamlessly combines the LoRA weights with the corresponding weights of the base model, creating a single unified model that includes the fine-tuned knowledge. 🎛️🔧\n",
     "\n",
-    "Once the LoRA weights are merged, we'll save the finetuned model to preserve its state. This way, we can easily load and use the finetuned model for future tasks without having to repeat the finetuning process. ✨"
+    "Once the LoRA weights are merged, we'll save the fine-tuned model to preserve its state. This way, we can easily load and use the fine-tuned model for future tasks without having to repeat the fine-tuning process. ✨"
    ]
   },
   {
@@ -588,11 +588,11 @@
    "metadata": {},
    "source": [
     "___\n",
-    "#### Step 8: Evaluating the Finetuned Model 🎉\n",
+    "#### Step 8: Evaluating the Fine-tuned Model 🎉\n",
     "\n",
-    "Now, let's generate a response to the same question we asked earlier using the finetuned model. We'll compare the output with the pre-finetuned model to see how much it has improved. Get ready to be amazed by the power of finetuning! 🤩💫\n",
+    "Now, let's generate a response to the same question we asked earlier using the fine-tuned model. We'll compare the output with the pre-fine-tuned model to see how much it has improved. Get ready to be amazed by the power of finetuning! 🤩💫\n",
     "\n",
-    "By merging the LoRA weights and saving the finetuned model, we ensure that our model is ready to tackle real-world tasks with its newly acquired knowledge. So, let's put it to the test and see how it performs! 🚀🌟"
+    "By merging the LoRA weights and saving the fine-tuned model, we ensure that our model is ready to tackle real-world tasks with its newly acquired knowledge. So, let's put it to the test and see how it performs! 🚀🌟"
    ]
   },
   {
@@ -647,7 +647,7 @@
     "\n",
     "Sharing your fine-tuned model with the community is a great way to contribute and showcase your work. Hugging Face provides a platform called the Model Hub, where you can easily push your model and make it accessible to others.\n",
     "\n",
-    "To push your model to the Hugging Face Model Hub, you'll need to create a repository on the platform and configure your authentication token. Once set up, you can use the push_to_hub() method provided by the transformers library to upload your model.\n",
+    "To push your model to the Hugging Face Model Hub, you'll need to create a repository on the platform and configure your authentication token. Once set up, you can use the `push_to_hub()` method provided by the transformers library to upload your model.\n",
     "\n",
     "Pushing your model to the Hugging Face Model Hub allows other researchers and developers to discover, use, and build upon your work. It fosters collaboration and accelerates progress in the field of natural language processing.\n",
     "\n",
@@ -673,9 +673,9 @@
    "source": [
     "### Happy finetuning! 😄✨\n",
     "\n",
-    "Congratulations on making it this far! You now have all the tools and knowledge to finetune the powerful Gemma model on your own datasets. Feel free to experiment, customize, and adapt this notebook to your specific use case. Try out different datasets, tweak the hyperparameters, and see how the model's performance improves.\n",
+    "Congratulations on making it this far! You now have all the tools and knowledge to fine-tune the powerful Gemma model on your own datasets. Feel free to experiment, customize, and adapt this notebook to your specific use case. Try out different datasets, tweak the hyperparameters, and see how the model's performance improves.\n",
     "\n",
-    "We encourage you to share your finetuned models and experiences with the community. Consider open-sourcing your work on platforms like GitHub or Hugging Face, and write blog posts detailing your journey. Your insights and achievements can inspire and help others in their own finetuning adventures.\n",
+    "We encourage you to share your fine-tuned models and experiences with the community. Consider open-sourcing your work on platforms like GitHub or Hugging Face, and write blog posts detailing your journey. Your insights and achievements can inspire and help others in their own finetuning adventures.\n",
     "\n",
     "If you encounter any issues or have suggestions for improvement, please don't hesitate to reach out and provide feedback. We value your input and are committed to making this notebook and the finetuning process as smooth and enjoyable as possible.\n",
     "\n",
@@ -709,7 +709,7 @@
     "- Hugging Face Transformers: [Documentation](https://huggingface.co/docs/transformers/index)\n",
     "- LoRA: [Paper](https://arxiv.org/abs/2106.09685)\n",
     "- Weights & Biases: [Website](https://wandb.ai/)\n",
-    "- dolly dataset: [dataset](databricks/databricks-dolly-15k)\n",
+    "- dolly dataset: [dataset](https://huggingface.co/datasets/databricks/databricks-dolly-15k)\n",
     "\n",
     "___\n",
     "\n",
