Missing doc strings and typo fixes

--- a/image_to_image.ipynb
+++ b/image_to_image.ipynb
@@ -56,7 +56,7 @@
      "output_type": "stream",
      "text": [
       "Installation in progress...\n",
-      "Installtion complete...\n"
+      "Installation complete...\n"
      ]
     }
    ],
@@ -77,7 +77,7 @@
     "import sys\n",
     "!{sys.executable} -m pip install invisible-watermark --user > /dev/null 2>&1 \n",
     "#!{sys.executable} -m pip install transformers huggingface-hub --user > /dev/null 2>&1\n",
-    "!echo \"Installtion complete...\""
+    "!echo \"Installation complete...\""
    ]
   },
   {
@@ -128,7 +128,7 @@
     "\n",
     "- **Class Definition**: We've defined a class `Img2ImgModel` that does the heavy lifting. It sets up and optimizes the Stable Diffusion model for image transformations based on text prompts.\n",
     "  \n",
-    "- **Optimization**: For best performance, the model is optimized using Intel-specific techniques in the `_optimize_pipeline` and `optimize_pipeline` methods using Intel Extension For PyTorch.\n",
+    "- **Optimization**: For best performance, the model is optimized using Intel-specific techniques in the `_optimize_pipeline` and `optimize_pipeline` methods using Intel Extension for PyTorch*.\n",
     "  \n",
     "- **Image Generation**: The heart of this class, `generate_images`, takes in a text prompt and an image URL. It then generates new images based on the text's instructions, applying various parameters like strength of transformation and guidance scale.\n",
     "\n",
@@ -174,8 +174,10 @@
     "        Args:\n",
     "            model_id_or_path (str): The ID or path of the pre-trained model.\n",
     "            device (str, optional): The device to run the model on. Defaults to \"xpu\".\n",
-    "            torch_dtype (torch.dtype, optional): The data type to use for the model. Defaults to torch.float16.\n",
+    "            torch_dtype (torch.dtype, optional): The data type to use for the model. Defaults to torch.bfloat16.\n",
     "            optimize (bool, optional): Whether to optimize the model. Defaults to True.\n",
+    "            warmup (bool, optional): Whether to warm up the model after loading. Defaults to False.\n",
+    "            scheduler (bool, optional): Whether to use scheduler in the model. Defaults to True.\n",
     "        \"\"\"\n",
     "        self.device = device\n",
     "        self.data_type = torch_dtype\n",
@@ -343,11 +345,11 @@
     "            image_url (str): The URL of the seed image.\n",
     "            variations (List[str]): The list of variations to apply to the prompt.\n",
     "            num_images (int, optional): The number of images to generate. Defaults to 5.\n",
-    "            num_inference_steps (int, optional): Number of noise removal steps.\n",
+    "            num_inference_steps (int, optional): Number of noise removal steps. Defaults to 30.\n",
     "            strength (float, optional): The strength of the transformation. Defaults to 0.75.\n",
     "            guidance_scale (float, optional): The scale of the guidance. Defaults to 7.5.\n",
     "            save_path (str, optional): The path to save the generated images. Defaults to \"image_to_image\".\n",
-    "\n",
+    "            batch_size (int, optional): The batch size for generation. Defaults to 1.\n",
     "        \"\"\"\n",
     "        input_image_path = \"input.png\"\n",
     "        init_image = self.get_image_from_url(image_url, input_image_path)\n",
@@ -380,8 +382,7 @@
     "                        save_path,\n",
     "                        f\"{'_'.join(prompt.split()[:3])}_{i+j}__{int(time.time() * 1e6)}.png\",\n",
     "                    )\n",
-    "                    images[j].save(output_image_path)\n",
-    "\n"
+    "                    images[j].save(output_image_path)\n"
    ]
   },
   {
