Missing doc strings and typo fixes

--- a/LLM_finetuning.ipynb
+++ b/LLM_finetuning.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "**What you will learn with this Notebook**\n",
     "\n",
-    "- 🛠️ Fine-tune a Language Model with either a pre-existing dataset or a custom dataset tailored to your needs on Intel Hw.\n",
+    "- 🛠️ Fine-tune a Language Model with either a pre-existing dataset or a custom dataset tailored to your needs on Intel HW.\n",
     "- 💡 Gain insights into the fine-tuning process, including how to manipulate various training parameters to optimize your model's performance.\n",
     "- 📊 Test different configurations and observe the results in real-time.\n",
     "\n",
@@ -55,7 +55,7 @@
     "\n",
     "**Fine-Tuning with QLoRA: Balancing Memory Efficiency and Adaptability**\n",
     "\n",
-    "We leverage the QLoRA methodology for fine-tuning, enabling the loading and refinement of LLMs within the constraints of available GPU memory. Quantized Low Rank Adaptation or QLoRA achieves this by applying a clever combination of weight quantization and adapter-based finetuning.\n",
+    "We leverage the QLoRA methodology for fine-tuning, enabling the loading and refinement of LLMs within the constraints of available GPU memory. Quantized Low Rank Adaptation or QLoRA achieves this by applying a clever combination of weight quantization and adapter-based fine-tuning.\n",
     "\n",
     "**How Does QLoRA Work?**\n",
     "\n",
@@ -442,7 +442,7 @@
     "- Trainer handles fine-tuning, optimizing only adapter weights.\n",
     "\n",
     "\n",
-    "So in summary, we leverage QLoRA in BigDL to load the base LLM in low precision, inject adapters with `peft`, and efficiently finetune by optimizing just the adapters end-to-end while keeping the base model fixed. This unlocks huge memory savings, allowing us to adapt giant models."
+    "So in summary, we leverage QLoRA in BigDL to load the base LLM in low precision, inject adapters with `peft`, and efficiently fine-tune by optimizing just the adapters end-to-end while keeping the base model fixed. This unlocks huge memory savings, allowing us to adapt giant models."
    ]
   },
   {
@@ -482,8 +482,9 @@
     "\n",
     "        Parameters:\n",
     "            data_points (dict): A batch from the dataset containing 'question', 'context', and 'answer'.\n",
-    "            add_eos_token (bool): Whether to add an EOS token at the end of each tokenized sequence.\n",
-    "            cutoff_len (int): The maximum length for each tokenized sequence.\n",
+    "            add_eos_token (bool): Whether to add an EOS token at the end of each tokenized sequence. Defaults to True.\n",
+    "            train_on_inputs (bool): Whether to train on inputs. Defaults to False.\n",
+    "            cutoff_len (int): The maximum length for each tokenized sequence. Defaults to 512.\n",
     "\n",
     "        Returns:\n",
     "            dict: A dictionary containing tokenized 'input_ids', 'attention_mask', and 'labels'.\n",
@@ -680,7 +681,7 @@
     "        print(param_format.format(\"Logging steps:\", logging_steps))\n",
     "        print(\"\\033[1;34m\" + \"=\" * 60 + \"\\033[0m\\n\")\n",
     "\n",
-    "        # Initialize the finetuner with the model and device information\n",
+    "        # Initialize the fine-tuner with the model and device information\n",
     "        finetuner = FineTuner(\n",
     "            base_model_id=model, model_path=MODEL_PATH, device=device\n",
     "        )\n",
@@ -720,7 +721,7 @@
    "id": "5ddc5dee-498b-498a-9ad8-d03f569e9e9a",
    "metadata": {},
    "source": [
-    "We can optionally use Weights & Biases to track our training metrics, uncomment the below cell to enable `wandb`. You will need to pass in your API key when prompted. You can ofcourse skip this step if you'd like to.\n"
+    "We can optionally use Weights & Biases to track our training metrics, uncomment the below cell to enable `wandb`. You will need to pass in your API key when prompted. You can of course skip this step if you'd like to.\n"
    ]
   },
   {
@@ -753,9 +754,9 @@
     "\n",
     "---\n",
     "\n",
-    "**Let's Finetune!**\n",
+    "**Let's Fine-tune!**\n",
     "\n",
-    "Now it's time to actually fine-tune the model. The `lets_finetune` function below takes care of this. It initializes a FineTuner object with the configurations you've set or left as default."
+    "Now it's time to actually fine-tune the model. The `lets_finetune` function below takes care of this. It initializes a `FineTuner` object with the configurations you've set or left as default."
    ]
   },
   {
@@ -979,7 +980,7 @@
    },
    "outputs": [],
    "source": [
-    "# lets load base model for a baseline comparison\n",
+    "# let's load base model for a baseline comparison\n",
     "base_model = TextToSQLGenerator(\n",
     "    use_adapter=False,\n",
     "    lora_checkpoint=\"\",\n",
